# omega-screen-recorder

./: .gitignore  BUILD-AND-RELEASE.md  BUILD.md  CONCAT_EXAMPLE.md  Cargo.toml  FEATURES_AND_USAGE.md  README.md  SOLUTION.md  TECHNICAL_ARCHITECTURE.md  build.rs  cursor_tracker.md  frames.db
.github/workflows/: build-binaries.yml  build-windows.yml  build.yml  publish-npm.yml  release.yml
demo.frames/: convert.bat  convert.sh  frames.ffconcat  interactions.json  manifest.txt
examples/: README.md
npm/screenrec-cli/: NEXT-STEPS.md  README.md  READY-TO-PUBLISH.md  package-lock.json  package.json
npm/screenrec-cli/prebuilt/: README.md
npm/screenrec-cli/prebuilt/darwin-arm64/: screenrec
npm/screenrec-cli/scripts/: doctor.js  install.js
scripts/: build-and-test-bundling.sh  bundle-ffmpeg-libs.sh  create-package-readme.sh  package-simple.sh  package-with-ffmpeg.sh  test-timer-behavior.sh
src/: audio.rs  capture.rs  cli.rs  config.rs  db.rs  display_info.rs  encoder.rs  encoder_subprocess.rs  error.rs  ffmpeg_utils.rs  interactions.rs  lib.rs  main.rs  screenshot.rs  validation.rs
src/audio/: mod.rs
src/capture/: mod.rs
src/encoder/: mod.rs
tests/: README.md  concurrent_recording_tests.rs  config_tests.rs  error_tests.rs  integration_tests.rs  test_ffmpeg_bundling.rs  validation_tests.rs
