[package]
name = "screenrec"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "High-performance cross-platform screen recording CLI tool"
license = "MIT"
repository = "https://github.com/OmegaLabs/rust-screenrec-challenge"

[[bin]]
name = "screenrec"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
screenshots = "0.8"
cfg-if = "1.0"
cpal = "0.15"
parking_lot = "0.12.5"
crossbeam-channel = "0.5.15"
bytemuck = "1.24.0"
ctrlc = "3.5.1"

[dev-dependencies]
tempfile = "3.10"

# Optional async runtime (not strictly required for current implementation)
# tokio = { version = "1.40", features = ["full"] }

# Alternative screen capture libraries (not used by default)
# scrap = "0.5"

# Audio capture (not used when delegating to ffmpeg CLI)
# cpal = "0.15"

# Video encoding via bindings (not used when delegating to ffmpeg CLI)
# ffmpeg-next = "6.1"

# Serialization for config files

# Error handling

# Cross-platform support

# Image handling

[target.'cfg(target_os = "macos")'.dependencies]
# macOS-specific dependencies
# screencapturekit = "0.2"
# core-graphics = "0.23"

[target.'cfg(target_os = "windows")'.dependencies]
# Windows-specific dependencies
# windows = { version = "0.52", features = ["Win32_Graphics_Gdi", "Win32_Graphics_Direct3D11"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1
