[package]
name = "screenrec"
version = "0.1.0"
edition = "2021"
authors = ["Omega Labs"]
description = "High-performance cross-platform screen recording CLI tool"
license = "GPL-3.0-or-later"
repository = "https://github.com/OmegaLabs/rust-screenrec-challenge"

[[bin]]
name = "omgrec"
path = "src/main.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }

# Async runtime
tokio = { version = "1.35", features = ["full", "sync"] }

# Screen capture
scrap = "0.5"

# Video encoding
# Note: "static" feature prefers static libs but doesn't guarantee full static linking
# True static linking requires building FFmpeg from source with specific flags
ffmpeg-next = { version = "7.0", features = ["static"] }

# Serialization for config files
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Cross-platform support
cfg-if = "1.0"

# Image handling
image = "0.24"
half = "=2.4.1"  # Lock to version compatible with rustc 1.80

# Logging
log = "0.4"
env_logger = "0.11"

# Time handling
chrono = "0.4"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "chrono"] }

# Threading utilities
crossbeam-channel = "0.5"

# Ctrl+C handling
ctrlc = "3.4"

# System info
hostname = "0.3"

# Home directory detection
dirs = "5.0"

# Mouse and keyboard event capture
rdev = "0.5"

[target.'cfg(target_os = "macos")'.dependencies]
# macOS-specific dependencies
core-graphics = "0.23"
active-win-pos-rs = "0.8"

[target.'cfg(target_os = "windows")'.dependencies]
# Windows-specific dependencies
windows = { version = "0.52", features = [
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Direct3D11",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_Foundation"
] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1